fixed: z-index for boards in tooltips

--- a/css/mf.css
+++ b/css/mf.css
@@ -477,7 +477,7 @@ td, th {
 
     /* Position the tooltip */
     position: absolute;
-    z-index: 1;
+    z-index: 5;
 }
 
 .tooltip .tooltiptext .user-link {
